--- a/src/views/paginas/duenio.hbs
+++ b/src/views/paginas/duenio.hbs
@@ -43,7 +43,7 @@
         </div>
     </div>
     <div class="col-2  p-3">
-        <a href="/paginas/inicio" type="button" class="btn btn-dark">Volver</a>
+        <a href="/paginas/inicio" type="button" class="btn btn-primary">Volver</a>
     </div>
     
 </div>
