--- a/src/views/paginas/basquet.hbs
+++ b/src/views/paginas/basquet.hbs
@@ -86,7 +86,7 @@
             </div>
         </div>
     </div>    
-    <div class="col-2 p-4">
+    <div class="col py-2">
         <a id="volver" href="/paginas/deporte" type="button" class="btn btn-danger">Volver</a>
     </div>
 </div>
